Fix layout issues

--- a/style.css
+++ b/style.css
@@ -565,8 +565,8 @@ textarea {
 
   .fixed {
     position: fixed;
-    width: 75%;
-    left: 12.5%;
+    width: 80%;
+    left: 10%;
   }
 
   nav {
